src/test/ui/const-generics/min_const_generics/default_function_param.stderr
error[E0282]: type annotations needed
  --> $DIR/default_function_param.rs:6:28
   |
LL | fn foo<const SIZE: usize = 5>() {}
   |                            ^ cannot infer type for type `{integer}`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
